# acts

./: CMakeLists.txt
CI/: missing_include_check.sh
Core/: CMakeLists.txt
Core/include/Acts/Geometry/: TrackingGeometry.hpp
Core/include/Acts/Seeding/: InternalSpacePoint.hpp  Seed.hpp  SeedFilter.hpp  SeedFinderHashing.hpp  SeedFinderHashing.ipp
Core/include/Acts/Seeding/Hashing/: CMakeLists.txt  HashingAlgorithm.hpp  HashingAlgorithm.ipp  HashingAlgorithmConfig.hpp  HashingAnnoy.hpp  HashingAnnoy.ipp  HashingTraining.hpp  HashingTraining.ipp  HashingTrainingConfig.hpp  annoylib.hpp  annoylib_custom.h  kissrandom.hpp  mman.hpp
Core/include/Acts/Seeding/Hashing/include/ActsExamples/Hashing/: HashingAlgorithm.hpp  HashingTraining.hpp
Core/include/Acts/Utilities/: MultiIndex.hpp
Core/src/Seeding/: CMakeLists.txt
Core/src/Seeding/Hashing/: HashingAlgorithm.cpp  HashingAnnoy.cpp  HashingTraining.cpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Hashing/: CMakeLists.txt
Examples/Algorithms/Hashing/src/: HashingAlgorithm.cpp  HashingAnnoy.cpp  HashingTraining.cpp  MergeSeedsAlgorithm.cpp
Examples/Algorithms/TrackFinding/src/: SeedingAlgorithmHashing.cpp
Examples/Framework/src/Framework/: Sequencer.cpp
Examples/Io/Csv/: CMakeLists.txt
Examples/Python/: CMakeLists.txt
Examples/Python/src/: Hashing.cpp  HashingStub.cpp  HashingTraining.cpp  HashingTrainingStub.cpp  MergeSeeds.cpp  ModuleEntry.cpp  Output.cpp  RootOutput.cpp  TrackFinding.cpp
Examples/Python/tests/: requirements.txt  root_file_hashes.txt  test_examples.py  test_writer.py
Examples/Scripts/: compareRootFiles.C
Examples/Scripts/Python/: full_chain_itk.py  full_chain_odd_TrackFormer_simu.py  full_chain_odd_TrackFormer_simu_csv.py  full_chain_odd_TrackFormer_simu_muons_csv.py  full_chain_odd_TrackFormer_simu_muons_root.py  full_chain_odd_TrackFormer_simu_muons_single_charge.py  full_chain_odd_TrackFormer_simu_root.py  full_chain_odd_hashing.py  full_chain_odd_re.py  hashing_seeding.py
cmake/: ActsConfig.cmake.in
docs/: getting_started.md
(+20 files in other folders)
